--- a/snake.css
+++ b/snake.css
@@ -1,14 +1,35 @@
 body {
   font-family: sans-serif;
 }
+
 #gameCanvas {
   float: left;
   margin-right: 15px;
 }
-button, #messageBox {
+
+button, #messageBox, #actionBox {
   font-size: 16px;
   margin-top: 15px;
 }
 #messageBox {
   line-height: 24px;
+}
+
+#actionBox {
+  font-size: 24px;
+}
+.arrow {
+  display: inline-block;
+}
+.arrow.north {
+  transform: rotate(0.75turn);
+}
+.arrow.east {
+  transform: rotate(0.00turn);
+}
+.arrow.south {
+  transform: rotate(0.25turn);
+}
+.arrow.west {
+  transform: rotate(0.50turn);
 }
