--- a/snake.css
+++ b/snake.css
@@ -7,12 +7,19 @@ body {
   margin-right: 15px;
 }
 
-button, #messageBox, #actionBox {
+button, #levelTarget, #message, #actionBox {
   font-size: 16px;
   margin-top: 15px;
 }
-#messageBox {
+#message {
   line-height: 24px;
+}
+
+#levelTarget .segment {
+  color: #e1a49c;
+}
+#levelTarget .achieved {
+  color: #2f60a8;
 }
 
 #actionBox {
