--- a/snake.css
+++ b/snake.css
@@ -7,16 +7,24 @@ body {
   margin-right: 15px;
 }
 
-button, #levelTarget, #message, #actionBox {
+button, #currentLevel, #levelTarget, #message, #actionBox {
   font-size: 16px;
   margin-top: 15px;
 }
 #message {
 }
 
-#levelTarget .segment {
+#levelTarget {
+  margin-top: 5px;
   font-family: monospace;
   font-size: 25px;
+  line-height: 16px;
+  width: 200px;
+  display: inline-block;
+  word-wrap: break-word;
+}
+
+#levelTarget .segment {
   padding: 0;
   color: #2e607f;
   margin-right: 1px;
